tests/NormalTests/paczka1/small_fuzzy/56401924.err
Error in line 5: A458 A610 70,9
Error in line 6: AODW20QAAj A610 65,5
Error in line 12: AODW20QAAj A458 45,6
